--- a/index.html
+++ b/index.html
@@ -3,30 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keamanan Aplikasi - OTP & Enkripsi</title>
+    <title>OTP Verification</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Login dan Keamanan Data</h1>
+        <h1>Login</h1>
         <form id="loginForm">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Masukkan Email" required />
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="Masukkan Password" required />
-            </div>
-            <div class="form-group">
-                <label for="otp">OTP:</label>
-                <input type="text" id="otp" placeholder="Masukkan OTP" required />
-            </div>
-            <button type="submit" id="submitBtn">Login</button>
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+            <button type="button" id="sendOtp">Send OTP</button>
         </form>
-        <div id="otpMessage" class="otp-message"></div>
+        <form id="otpForm" style="display: none;">
+            <label for="otp">Enter OTP:</label>
+            <input type="text" id="otp" maxlength="6" required>
+            <button type="button" id="verifyOtp">Verify OTP</button>
+        </form>
+        <div id="message"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
