--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,38 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Login</h1>
-        <form id="loginForm">
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
-            <button type="button" id="sendOtp">Send OTP</button>
-        </form>
-        <form id="otpForm" style="display: none;">
-            <label for="otp">Enter OTP:</label>
-            <input type="text" id="otp" maxlength="6" required>
-            <button type="button" id="verifyOtp">Verify OTP</button>
-        </form>
-        <div id="message"></div>
+    <div class="tahap-container">
+        <div class="container">
+            <h1>Login</h1>
+            <form id="loginForm">
+                <label for="email">Email:</label>
+                <input type="email" id="email" required>
+                <button type="button" id="sendOtp">Send OTP</button>
+            </form>
+            <form id="otpForm" style="display: none;">
+                <label for="otp">Enter OTP:</label>
+                <input type="text" id="otp" maxlength="6" required>
+                <button type="button" id="verifyOtp">Verify OTP</button>
+            </form>
+            <div id="message"></div>
+        </div>
+
+        <!-- Steps Section -->
+        <div class="steps-container">
+            <h2>Tahap simulasi Verifikasi otp</h2>
+            <ul>
+                <li>Masukkan email dan klik "Send OTP."</li>
+                <li>Akan muncul sebuah pesan, copy OTPnya</li>
+                <li>Masukkan OTP yang telah di copy di kolom yang tersedia.</li>
+                <li>Klik "Verifikasi OTP" untuk menyelesaikan proses login.</li>
+                <li>Jika OTP benar, akan diarahkan ke halaman berikutnya.</li>
+                <li>Jika OTP salah, akan diarahkan ke menu login lagi.</li>
+            </ul>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
